+ добавлены проекты example_MolDyn_tst и look_md_results  * внесены изменения в функцию model::DoMolDyn_tst и в соответствующий ей диалог и файл параметров  * изменена функция project::popup_TrajSetTotalFrames
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@15 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/consol/ghemical.rc
+++ b/consol/ghemical.rc
@@ -89,7 +89,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,48,124,51,10
     CONTROL         "langevin",IDC_CHECK_LANGEVIN,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,48,137,43,10
-    PUSHBUTTON      "Trajfile browse",IDC_BUTTON_BROWSE,115,182,72,14
+    PUSHBUTTON      "Trajfile browse",IDC_BUTTON_BROWSE_TRAJ,115,182,72,14
     EDITTEXT        IDC_EDIT_NSTEPS_H,48,13,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_NSTEPS_E,48,36,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_NSTEPS_S,48,59,40,14,ES_AUTOHSCROLL
@@ -226,7 +226,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
 END
 
-IDD_DIALOG_MOL_DYN_TST DIALOGEX 0, 0, 194, 254
+IDD_DIALOG_MOL_DYN_TST DIALOGEX 0, 0, 200, 300
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Molecular Dinamics"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
@@ -243,7 +243,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,48,124,51,10
     CONTROL         "langevin",IDC_CHECK_LANGEVIN,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,48,137,43,10
-    PUSHBUTTON      "Trajfile browse",IDC_BUTTON_BROWSE,115,182,72,14
+    PUSHBUTTON      "Trajfile browse",IDC_BUTTON_BROWSE_TRAJ,115,182,72,14
     EDITTEXT        IDC_EDIT_NSTEPS_H,48,13,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_NSTEPS_E,48,36,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_NSTEPS_S,48,59,40,14,ES_AUTOHSCROLL
@@ -267,8 +267,10 @@ BEGIN
     CONTROL         "Maxwell distribution initial",
                     IDC_CHECK_MAXWELL_DISTRIBUTION_INIT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,48,147,94,10
-    PUSHBUTTON      "LastFrameFile browse",IDC_BUTTON_BROWSE2,108,218,79,14
-    EDITTEXT        IDC_EDIT_TRAJFILE2,7,233,180,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "LastInputFrameFile browse",IDC_BUTTON_BROWSE_INPUT_FRAME,100,218,87,14
+    PUSHBUTTON      "LastOutputFrameFile browse",IDC_BUTTON_BROWSE_OUTPUT_FRAME,100,250,87,14
+    EDITTEXT        IDC_EDIT_INPUT_FRAME_FILE,7,233,180,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_OUTPUT_FRAME_FILE,7,265,180,14,ES_AUTOHSCROLL
     CONTROL         "Load Last Frame",IDC_CHECK_LOAD_LAST_FRAME,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,218,69,10
     EDITTEXT        IDC_EDIT_MAXWELL_INIT_TEMPERATURE,147,145,40,14,
