--- a/consol/ghemical.rc
+++ b/consol/ghemical.rc
@@ -268,13 +268,13 @@ BEGIN
                     IDC_CHECK_MAXWELL_DISTRIBUTION_INIT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,48,147,94,10
     PUSHBUTTON      "LastInputFrameFile browse",IDC_BUTTON_BROWSE_INPUT_FRAME,100,218,87,14
-    PUSHBUTTON      "LastOutputFrameFile browse",IDC_BUTTON_BROWSE_OUTPUT_FRAME,100,250,87,14
+    PUSHBUTTON      "LastOutputFrameFile browse",IDC_BUTTON_BROWSE_OUTPUT_FRAME,90,250,97,14
     EDITTEXT        IDC_EDIT_INPUT_FRAME_FILE,7,233,180,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_OUTPUT_FRAME_FILE,7,265,180,14,ES_AUTOHSCROLL
-    CONTROL         "Load Last Frame",IDC_CHECK_LOAD_LAST_FRAME,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,7,218,69,10
-    EDITTEXT        IDC_EDIT_MAXWELL_INIT_TEMPERATURE,147,145,40,14,
-                    ES_AUTOHSCROLL
+    CONTROL         "Load Last Frame",IDC_CHECK_LOAD_LAST_FRAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,218,69,10
+    EDITTEXT        IDC_EDIT_MAXWELL_INIT_TEMPERATURE,147,145,40,14,ES_AUTOHSCROLL
+    CONTROL         "Extended trajectory",IDC_CHECK_EXTENDED_TRAJECTORY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,183,77,10
 END
 
 
