переработка extended trajectory, long_stream для работы с большими файлами траекторий, баг в eng1_mm_default_nbt_sl::ComputeNBT2
git-svn-id: file:///E/_SVN/ghemical-1.90.32_repository@33 8ebba67a-7d6b-164d-8379-c1d166cbd162

--- a/libghemical/libghemical.vcproj
+++ b/libghemical/libghemical.vcproj
@@ -491,6 +491,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\long_stream.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\model.h"
 				>
 			</File>
