reopen_traj_file_on_every_frame_save.patch added

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -74,6 +74,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.calc_real_traj_frames.patch
 	patch -p1 < ./ghemical.release20111012.frame_save_frq_increasing.patch
 	patch -p1 < ./ghemical.release20111012.HAVE_FIX_OF_GTK_IS_TEXT_MARK_FAIL.patch
+	patch -p1 < ./ghemical.release20111012.reopen_traj_file_on_every_frame_save.patch
 
 prepare_originals_for_patch:
 	make clean
