boundary_optimization fixed

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -80,6 +80,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.boundary_opt.patch
 	patch -p1 < ./ghemical.release20111012.apply_periodic_cond.patch
 	patch -p1 < ./ghemical.release20111012.check_atom_locations.patch
+	patch -p1 < ./ghemical.release20111012.boundary_opt_logging.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
