maxwell_distribution_init.patch

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -82,6 +82,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.check_atom_locations.patch
 	patch -p1 < ./ghemical.release20111012.boundary_opt_logging.patch
 	patch -p1 < ./ghemical.release20111012.make_const_inpuls_while_set_ekin.patch
+	patch -p1 < ./ghemical.release20111012.maxwell_distribution_init.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
