Fix build on windows

--- a/consol/ghemical.vcproj
+++ b/consol/ghemical.vcproj
@@ -48,7 +48,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib;../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../mpqc-2.3.0\src\lib&quot;;&quot;../winopenbabel-1.100.2\src&quot;;&quot;../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -142,7 +142,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib;../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../mpqc-2.3.0\src\lib&quot;;&quot;../winopenbabel-1.100.2\src&quot;;&quot;../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -236,7 +236,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib;../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../mpqc-2.3.0\src\lib&quot;;&quot;../winopenbabel-1.100.2\src&quot;;&quot;../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -330,7 +330,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../mpqc-2.3.0\src\lib;../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../mpqc-2.3.0\src\lib&quot;;&quot;../winopenbabel-1.100.2\src&quot;;&quot;../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="true"
 				RuntimeLibrary="0"
