--- a/libghemical/src/simple_test/example4/example4.vcproj
+++ b/libghemical/src/simple_test/example4/example4.vcproj
@@ -45,7 +45,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../mpqc-2.3.0\src\lib; ../../../../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../../../../mpqc-2.3.0\src\lib&quot;;&quot;../../../../winopenbabel-1.100.2\src&quot;;&quot;../../../../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -127,7 +127,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../mpqc-2.3.0\src\lib; ../../../../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../../../../mpqc-2.3.0\src\lib&quot;;&quot;../../../../winopenbabel-1.100.2\src&quot;;&quot;../../../../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -207,7 +207,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../../../../mpqc-2.3.0\src\lib; ../../../../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../../../../mpqc-2.3.0\src\lib&quot;;&quot;../../../../winopenbabel-1.100.2\src&quot;;&quot;../../../../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="true"
@@ -287,7 +287,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../../../../mpqc-2.3.0\src\lib; ../../../../winopenbabel-1.100.2\src"
+				AdditionalIncludeDirectories="&quot;../../../../mpqc-2.3.0\src\lib&quot;;&quot;../../../../winopenbabel-1.100.2\src&quot;;&quot;../../../../glut37/glut-3.7/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="true"
